added table to lab01

--- a/lab01.org
+++ b/lab01.org
@@ -64,6 +64,36 @@ Solution
 |          9 |           |        |        |
 |         10 |           |        |        |
 
+
+
+|           | Natalie | Marie | Lucia | Francine | Estelle | Ruth | Vanessa |   | Abbot | Coriano | Schtillet | Williford | Tinghill | Graffetz | Manzarita |   | $125 | $155 | $185 | $215 | $245 | $260 |
+| 4         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 5         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 6         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 7         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 8         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 9         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| 10        |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $125      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $155      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $170      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $185      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $215      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $245      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| $260      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Abbot     |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Coriano   |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Schtillet |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Williford |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Tinghill  |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Graffetz  |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+| Manzarita |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
+
+
+
 * TODO Exercises
 In 01-ponder do every third exercise. 
 That is if you start at the first or 1st then you need to do 4th,
