--- a/lab01.org
+++ b/lab01.org
@@ -11,16 +11,21 @@ As a group or individually create a public repo on github.
 Then create your own file with your solutions.  Please include
 the name of each team member. 
 
-* TODO Welcome to the world of unicorns, goblins
+* DONE Welcome to the world of unicorns, goblins
+  CLOSED: [2018-05-04 Fri 13:37]
+  :LOGBOOK:
+  CLOCK: [2018-05-04 Fri 13:27]--[2018-05-04 Fri 13:37] =>  0:10
+  :END:
 In this world unicorns only tell the truth.
 Goblins only lie.
 A says: B is a unicorn.
 B says: A and I are opposite type.
 
-What is A:
-What is B:
+What is A:A Goblin, lying about another goblin being a unicorn
+What is B:A Goblin, lying by saying the other goblin is not a unicorn
 
-* TODO 8 duds and 1 armed bomb.
+* DONE 8 duds and 1 armed bomb.
+  CLOSED: [2018-05-04 Fri 13:38]
 Some idiot forgot to disarm a bomb that is laid in the 'decomisioned' bomb pile.
 Unfortunately the only way to tell which bomb is armed is to use a special weighing system.
 To add insult to injury we don't know if the armed bomb weighs less or more on the system just that it weighs differently.
@@ -30,7 +35,11 @@ Your job is to tell which 1 bomb out of the 9 bombs is armed while only using th
 If the bomb is heavier you would weigh 3 and 3 and if one side is heavier you can weigh 2 of that group and if they are the same weight the armed bomb will be the one not weighed otherwise you will be able to find it by it being heavier.
 If the initial weigh of 3 and 3 are the same you will weigh 1 and 1 from the ones not weighed and find the bomb the same way.
 
-* TODO The BEAST
+* DONE The BEAST
+  CLOSED: [2018-05-04 Fri 13:52]
+  :LOGBOOK:
+  CLOCK: [2018-05-04 Fri 13:39]--[2018-05-04 Fri 13:39] =>  2:10
+  :END:
 The Shoe Shack has made several top-dollar sales today. 
 Using only the clues below, match each customer to their foot size, 
 shoe brand and final purchase price.
@@ -64,34 +73,7 @@ Solution
 |          9 | Francine  | Manzarita  |   245  |
 |         10 |   Ruth    | Abbott Hill|   170  |
 
-
-VALUES FOR THIS TABLE CAN BE FOUND IN image.png
-|           | Natalie | Marie | Lucia | Francine | Estelle | Ruth | Vanessa |   | Abbot | Coriano | Schtillet | Williford | Tinghill | Graffetz | Manzarita |   | $125 | $155 | $185 | $215 | $245 | $260 |
-| 4         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 5         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 6         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 7         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 8         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 9         |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| 10        |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $125      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $155      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $170      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $185      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $215      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $245      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| $260      |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Abbot     |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Coriano   |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Schtillet |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Williford |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Tinghill  |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Graffetz  |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-| Manzarita |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-|           |         |       |       |          |         |      |         |   |       |         |           |           |          |          |           |   |      |      |      |      |      |      |
-
+Values for the table shown in class can be found in [[./image.png]]
 
 
 * TODO Exercises
